# fruit-store

./: README.md
data/: README.md
data-lab/: README.md  report_check.ipynb  requirements.txt
devops/: docker-compose.yaml
fruit-store/: Makefile  README.md  config.mk  pyproject.toml
fruit-store/docker/: Dockerfile  entrypoint.sh
fruit-store/fruit_store/: __init__.py
fruit-store/fruit_store/annot/: data_input.py  fruit_store_pb2.pyi  healthcheck.py  reporting.py
fruit-store/fruit_store/annot/fruit_store/grpc/: fruit_store_pb2.pyi
fruit-store/fruit_store/cli/: app.py  client.py  server.py
fruit-store/fruit_store/client/: client.py  request_report.py
fruit-store/fruit_store/db/: engine.py  tables.py
fruit-store/fruit_store/environment/: constants.py  settings.py
fruit-store/fruit_store/grpc/: factory.py  fruit_store_pb2.py  fruit_store_pb2_grpc.py
fruit-store/fruit_store/mem_storage/: mem_storage.py
fruit-store/fruit_store/server/: async_serve.py  server.py
fruit-store/proto/fruit_store/grpc/: fruit-store.proto
fruit-store/tests/unitary/: test_encode_decode.py  test_mem_store.py
